--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -1,15 +1,104 @@
 /* -----------------------------------------------------------------------------
-* List
+* Common.
 * ----------------------------------------------------------------------------- */
 
-.tribe-ext-events-control-list-status.tribe-ext-events-control-list-status--canceled,
-.tribe-ext-events-control-list-status.tribe-ext-events-control-list-status--postponed {
+.tribe-ext-events-control-text,
+.tribe-common .tribe-ext-events-control-text {
+	color: #141827;
+	font-family: "Helvetica Neue", Helvetica, -apple-system, BlinkMacSystemFont, Roboto, Arial, sans-serif;
+	font-weight: 400;
+	line-height: 1.38;
+}
+
+.tribe-ext-events-control-text--bold,
+.tribe-common .tribe-ext-events-control-text--bold {
+	font-weight: 700;
+}
+
+.tribe-ext-events-control-text--red,
+.tribe-common .tribe-ext-events-control-text--red {
+	color: #DA394D;
+}
+
+.tribe-ext-events-control-text--blue,
+.tribe-common .tribe-ext-events-control-text--blue {
+	color: #334AFF;
+}
+.tribe-ext-events-control-text--live-icon,
+.tribe-ext-events-control-text--alert-icon  {
+	display: inline-flex;
+	align-items: center;
+}
+
+.tribe-ext-events-control-text--live-icon::before,
+.tribe-common .tribe-ext-events-control-text--live-icon::before {
+	background-image: url('../images/live.svg');
+	background-repeat: no-repeat;
+	background-size: 24px;
+	display: inline-block;
+	content: '';
+	min-width: 24px;
+	height: 14px;
+	margin-right: 8px;
+}
+
+.tribe-ext-events-control-text--alert-icon::before,
+.tribe-common .tribe-ext-events-control-text--alert-icon::before {
+	background-image: url('../images/alert.svg');
+	background-repeat: no-repeat;
+	background-size: 15px;
+	display: inline-block;
+	content: '';
+	min-width: 15px;
+	height: 15px;
+	margin-right: 8px;
+}
+
+/* -----------------------------------------------------------------------------
+* List.
+* ----------------------------------------------------------------------------- */
+
+.tribe-ext-events-control-list-status,
+.tribe-common .tribe-ext-events-control-list-status {
 	float: left;
 	margin-right: 8px;
 }
 
-.tribe-ext-events-control-list-status.tribe-ext-events-control-list-status--canceled .tribe-ext-events-control-list__red-text,
-.tribe-ext-events-control-list-status.tribe-ext-events-control-list-status--postponed .tribe-ext-events-control-list__red-text {
-	color: #DA394D;
-	font-weight: 700;
+/* -----------------------------------------------------------------------------
+* Single.
+* ----------------------------------------------------------------------------- */
+.tribe-ext-events-control-single-notice {
+	border: 1px solid #D5D5D5;
+	padding: 12px 20px;
+	font-size: 14px;
+}
+
+.tribe-ext-events-control-single-notice--postponed,
+.tribe-ext-events-control-single-notice--canceled {
+	border-left-width: 4px;
+	border-left-color: #DA394D;
+}
+
+.tribe-ext-events-control-single-notice--live {
+	border-radius: 4px;
+	display: inline-flex;
+}
+
+.tribe-ext-events-control-single-notice-description {
+	padding-left: 23px;
+	margin-bottom: 10px;
+}
+
+.tribe-ext-events-control-single-notice-live-link {
+	margin-left: 10px;
+}
+
+.tribe-ext-events-control-single-notice-live-link a {
+	color: #141827;
+	border-bottom: 1px solid #334AFF;
+}
+
+.tribe-ext-events-control-single-notice-live-link a:hover,
+.tribe-ext-events-control-single-notice-live-link a:focus {
+	color: #334AFF;
 }
